<resources>
    <string name="app_name">smartTimetable</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_name">Subject Name</string>
    <string name="theory_hours">Theory Hours</string>
    <string name="practical_hours">Practical Hours</string>


    <string name="continuous_lab_2_periods">Continuous Lab (2 periods)</string>


    <string name="_1st_period_mathematics">1st Period - Mathematics</string>
    <string name="_2nd_period_physics">2nd Period - Physics</string>

    <string name="branch_aiml">Branch: AIML</string>
    <string name="semester_1">Semester: 1</string>


    <string name="day_time">Day/Time</string>


    <string name="faculty_name">Faculty Name</string>
    <string name="subject_assigned">Subject Assigned</string>


    <string name="is_lab">Is Lab?</string>
    <string name="save">Save</string>
    <string name="add_room_lab">Add Room / Lab</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="save_faculty">Save Faculty</string>

    <string name="select_scheme">Select Scheme</string>


    <string name="plan_your_time_smartly">Plan Your Time Smartly</string>
    <string name="smart_timetable_generator">Smart Timetable Generator</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>

    <string name="upload_scheme">Upload Scheme</string>
    <string name="view_timetable">View Timetable</string>
    <string name="faculty_management">Faculty Management</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save_scheme">Save Scheme</string>
    <string name="add_subject">Add Subject</string>

    <string name="day">Day</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="monday">Monday</string>
    <string name="maths">Maths</string>
    <string name="cn">CN</string>
    <string name="lunch">Lunch</string>
    <string name="java">Java</string>
    <string name="tuesday">Tuesday</string>
    <string name="dbms">DBMS</string>
    <string name="lab">Lab</string>
    <string name="Lunch">Lunch</string>
    <string name="python">Python</string>
    <string name="generate_timetable">Generate Timetable</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>

    <string name="timetable">Timetable</string>

    <string name="smart_timetable">Smart Timetable</string>
    <string name="share_as_pdf">Share as PDF</string>
    <string name="show_faculty">Show Faculty</string>


</resources>