<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content -->

    <!-- Navigation Drawer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2d32a8"
        android:orientation="vertical"
        android:padding="16dp">

        <include layout="@layout/toolbar" />

        <!-- Generate -->
        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:backgroundTint="#FFFFFF"
            android:elevation="6dp"
            android:text="@string/generate_timetable"
            android:textColor="#000"
            android:textSize="16sp" />

        <!-- Upload -->
        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:backgroundTint="#FFFFFF"
            android:elevation="6dp"
            android:text="@string/upload_scheme"
            android:textColor="#000"
            android:textSize="16sp" />

        <!-- View -->
        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:backgroundTint="#FFFFFF"
            android:elevation="6dp"
            android:text="@string/view_timetable"
            android:textColor="#000"
            android:textSize="16sp" />

        <!-- Faculty -->
        <Button
            android:id="@+id/btnFaculty"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:backgroundTint="#FFFFFF"
            android:elevation="6dp"
            android:text="@string/faculty_management"
            android:textColor="#000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:padding="16dp"
            android:layout_width="341dp"
            android:layout_height="237dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/android_logo" />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>